--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  text-align: center;
 }
 
 .grid-container {
@@ -36,17 +37,17 @@ h3 {
 }
 
 .circles {
-  display: flex;
+  display: inline;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   grid-row: 2;
   text-align: center;
+  width: 50px;
+  height: 50px;
 }
 
 .circle {
-  width: 150px;
-  height: 150px;
   background-size: cover;
   background-image: url('./media/ghost3.png');
 }
