--- a/src/index.css
+++ b/src/index.css
@@ -7,16 +7,17 @@
 
 body {
   background-image: url('/src/assets/background.png');
-  color: white;
-  height: 100vh;
+  color: whitesmoke;
   font-family: 'Press Start 2P', cursive;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: center;
   background-size: cover;
   text-align: center;
 }
 
-.grid-container {
+/*New Game*/
+.newGame {
   display: grid;
   margin: auto;
   align-items: center;
@@ -25,34 +26,64 @@ body {
   grid-gap: 1rem;
   grid-template-rows: 200px 200px 250px;
 }
+.newGame h1,
+h2 {
+  margin-top: 4rem;
+  justify-content: center;
+}
 
-header {
+.newGame input {
+  display: inline-block;
+  text-align: center;
+  margin-top: 8rem;
+  margin-left: auto; /* Center horizontally */
+  margin-right: auto;
+  font-weight: bold;
+  padding: 10px 0 10px 10px;
+  background-color: lightgray;
+  text-shadow: -1px -1px black, 1px 1px whitesmoke;
+  color: gray;
+  border-radius: 7px;
+  box-shadow: 0 0.2em gray;
+  height: 5rem;
+  width: fit-content;
+  font-size: 30px;
+}
+
+.newGameLevel {
   margin: 2rem;
-  grid-row: 1;
 }
 
-p,
-h3 {
-  margin: 1rem;
-}
-
-.circles {
-  display: inline;
+/* Circles / Ghosts */
+.circle {
+  display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   grid-row: 2;
   text-align: center;
-  width: 50px;
-  height: 50px;
 }
 
+.circle img {
+  margin-top: 2rem;
+  width: 150px;
+  height: 150px;
+  background-size: cover;
+}
+
+.circles button {
+  align-items: center;
+  text-align: center;
+  margin: 4rem;
+}
+
+/*
 .circle {
   background-size: cover;
   background-image: url('./media/ghost3.png');
 }
 
-.circles #ghost2 {
+ .circles #ghost2 {
   filter: hue-rotate(-120deg);
 }
 .circles #ghost3 {
@@ -67,33 +98,26 @@ h3 {
   width: 200px;
   height: 200px;
   background-size: cover;
-}
+} */
 
 button {
-  position: relative;
-  text-align: center;
-  align-items: center;
-  justify-content: flex-end;
-  display: flex;
   margin: 5px;
   font-weight: bold;
   padding: 10px 0 10px 10px;
   background-color: lightgray;
-  text-shadow: -1px -1px black, 1px 1px white;
+  text-shadow: -1px -1px rgb(157, 121, 121), 1px 1px white;
   color: gray;
   border-radius: 7px;
   box-shadow: 0 0.2em gray;
   min-height: 50px;
   min-width: 100px;
   font-size: 30px;
-  font-family: 'Press Start 2P', cursive;
 }
 
 .button {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  grid-row: 3;
 }
 
 #startButton:active {
@@ -121,13 +145,13 @@ footer {
 }
 
 .overlay {
-  background-color: rgba(135, 207, 235, 0.9);
   position: fixed;
+  background-color: rgba(135, 207, 235, 0.9);
   left: 0;
   top: 0;
   height: 100vh;
   width: 100vw;
-  display: none;
+  display: grid;
   justify-content: center;
   align-items: center;
   text-align: justify;
@@ -147,7 +171,15 @@ footer {
   text-align: center;
 }
 
-#modalStartbutton {
+.gameOverContainer {
+  text-align: center;
+}
+.gameOverContainer h2,
+h3,
+p {
+  margin: 1rem;
+}
+.gameOverContainer #modalStartbutton {
   box-shadow: none;
   position: relative;
   top: 0.2em;
