--- a/src/index.css
+++ b/src/index.css
@@ -28,14 +28,14 @@ body {
 }
 .newGame h1,
 h2 {
-  margin-top: 4rem;
+  margin-top: 2rem;
   justify-content: center;
 }
 
 .newGame input {
   display: inline-block;
   text-align: center;
-  margin-top: 8rem;
+  margin-top: 4rem;
   margin-left: auto; /* Center horizontally */
   margin-right: auto;
   font-weight: bold;
@@ -62,6 +62,10 @@ h2 {
   align-items: center;
   grid-row: 2;
   text-align: center;
+  background-image: url('./media/ghost3.png');
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
 }
 
 .circle img {
@@ -77,28 +81,12 @@ h2 {
   margin: 4rem;
 }
 
-/*
-.circle {
-  background-size: cover;
-  background-image: url('./media/ghost3.png');
-}
-
- .circles #ghost2 {
-  filter: hue-rotate(-120deg);
-}
-.circles #ghost3 {
-  filter: hue-rotate(300deg);
-}
-.circles #ghost4 {
-  filter: hue-rotate(160deg);
-}
-
 .circle.active {
-  background-image: url('./media/ghost1.png');
+  background-image: url('./assets/ghost2.png');
   width: 200px;
   height: 200px;
   background-size: cover;
-} */
+}
 
 button {
   margin: 5px;
@@ -184,3 +172,20 @@ p {
   position: relative;
   top: 0.2em;
 }
+
+/*
+.circle {
+  background-size: cover;
+  background-image: url('./media/ghost3.png');
+}
+
+ .circles #ghost2 {
+  filter: hue-rotate(-120deg);
+}
+.circles #ghost3 {
+  filter: hue-rotate(300deg);
+}
+.circles #ghost4 {
+  filter: hue-rotate(160deg);
+}
+*/
